# playground-2023

./: .air.toml  .eslintrc.cjs  .eslintrc.js  .gitignore  Cargo.toml  Dockerfile  README.md  Taskfile.yml  app.d.ts  designdoc.md  docker-compose.yaml  gatsby-config.ts  go.mod  go.sum  main.go  next.config.js  package.json  panda.config.ts  pnpm-lock.yaml  prettier.config.mjs  pyproject.toml  tasks.go  tsconfig.json  turbo.json
.devcontainer/: devcontainer.json
.devdev/: .gitignore  package.json
.devdev/ml-learning/: .gitignore  README.md  pyproject.toml
.devdev/ml-learning/lib/: bark.ipynb  named-entities.ipynb  transformers-pipeline.ipynb  zero-shot.ipynb
.devdev/waveslib/: Cargo.toml
.devdev/waveslib/src/services/: points.rs
aero/: .gitignore  Cargo.toml  designdoc.md
app/: jupyter.py  main.py
appsmith-tutorial/: docker-compose.yml
assets/: sample1.json
bun-nextjs/: README.md  bun.lockb  package.json
chakra-ui/: README.md  package.json
chakraui/: package.json
cloudscape/: README.md  next.config.js  package.json
cmd/: cli.go  list.go  root.go  util.go  view.go
command/: fn.go  main.go  toolkit.go  tools.go  utils.go  web.go
consul-minikube/: README.md  config.yaml
content/: schema.go
contents/: base64_decode.go
cypress/: package.json
daisyui/: README.md  package.json  postcss.config.cjs  tailwind.config.cjs  tsconfig.json
daisyui-tutorial/: package.json
dbt-lightdash/: docker-compose.yaml
deno-http-serve/: README.md  deno.jsonc  handler.ts  handler_bench.ts  handler_test.ts  main.ts
directus/: README.md  docker-compose.yaml
docusaurus/: README.md  docusaurus.config.js  package.json
driverjs-nextjs/: README.md  package.json  pnpm-lock.yaml
duckdb-pandas/: .gitignore  README.md  pyproject.toml
duckdb-pandas/app/: main.py
elixir/: Dockerfile  Elixir.Greeting.beam  docker-compose.yaml
excalidraw-tutorial/: package.json
fastify-with-husky/: .eslintrc.cjs  package.json  tsconfig.json
flywaywind/: README.md
fn/: base64.go  json.go  main.go  schema.go  uppercase.go
fndef/: main.go
frontend/: package.json
furoshiki-matcher/: .gitignore  .prettierrc.json  tsconfig.json
ghbranch/: list.go  view.go
ghlast/: list.go  view.go
gitness-tutorial/: README.md  docker-compose.yaml
go-playwright/: README.md  go.mod  go.sum  main.go
golang-net-html/: README.md  go.mod  main.go
gpt-crawler-try/: .gitignore  config.ts
gradio/: README.md  pyproject.toml
grafana-docker/: README.md  docker-compose.yaml
handler/: codego.go  content.go  describe_fn.go  fns.go  list_contents.go  list_fns.go  rebuild.go
hono-tutorial/: README.md  package.json
hugo-tutorial/: .gitignore  README.md
istio-ambient-mesh/: README.md  cluster.yaml
jotai/: README.md  package.json
langchain-tutorial/: pyproject.toml
langchain-tutorial/app/: main.py
lib/: bert.ipynb  jupyter.py  transformers-pipeline.ipynb
mageai/: .gitignore  aa.csv  pyproject.toml
minisearch-nextjs/: package.json  pnpm-lock.yaml  tsconfig.json
moonrepo/: .gitignore  README.md
n8n-tutorial/: docker-compose.yaml
nextjs-mui/: package.json
nextra-sample/: README.md  package.json  pnpm-lock.yaml  theme.config.jsx
nodejs-decorator/: README.md  package.json  tsconfig.json
nomad-tutorial/: README.md  main.tf  nginx.hcl  redis.hcl
notebooks/: a.ipynb
pandacss/: .gitignore  README.md  package.json  panda.config.ts  tsconfig.json
payloadcms/: .devcontainer.json  .env.example  README.md  docker-compose.yml  package.json
pocketbase-docker/: README.md  docker-compose.yaml
public/: index.html
qdrant/: README.md
qdrant-tutorial/: README.md  pyproject.toml
qdrant-tutorial/app/: main.py
radixui/: README.md  package.json
react-admin-tutorial/: README.md  package.json
react-flow/: package.json
refine-tutorial/: README.MD  package.json
reg-cli/: README.md  package.json  reg.json  report.html  serve.js
reveal-react/: package.json
ruby-thor-hello/: Gemfile  README.md  ruby-thor-hello.gemspec
ruby_thor_hello/: Gemfile  README.md  ruby_thor_hello.gemspec
rust-hcl/: Cargo.toml
rust-rocksdb/: Cargo.toml
satori/: .gitignore  package.json
schema/: main.go
scripts/: emitter.ts
spark/: README.md  docker-compose.yaml
src/: index.ts  lib.rs
strapi-tutorial/: README.md  package.json
t3stack/: .eslintrc.cjs  .gitignore  README.md  next.config.mjs  package.json
tabbyml/: README.md  compose.yaml
tauri-nextjs-tutorial/: .gitignore  README.md  package.json  tauri.conf.json
tauri-wry/: Cargo.toml  README.md
textlint-tutorial/: README.md  file.md  package.json
theme-ui/: package.json  tsconfig.json
tldraw-tutorial/: README.md  package.json
tooljet-tutorial/: .gitignore  README.md  docker-compose.yaml
trywhisper/: docker-compose.yaml  pyproject.toml
usegesture/: README.md  package.json
util/: run.go
utils/: run.go
web/: app.tsx  (+1 more)
(+311 files in other folders)
