[package]
name = "serde-jsonformat-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
serde = "1.0.145"
serde_json = "1.0.86"
serde_yaml = "0.9.13"

[[bin]]
name = "jsonformat"
