[package]
name = "serde-jsonformat-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
serde = "1.0.151"
serde_json = "1.0.91"
serde_yaml = "0.9.16"

[[bin]]
name = "jsonformat"
