[tool.poetry]
name = "moviecatalog-app"
version = "0.1.0"
description = ""
authors = []
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
keras = "^2.11.0"

[tool.poetry.dev-dependencies]
taskipy = "^1.10.3"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.main:app"

[tool.taskipy.tasks]
format = "poetry run black ./app"

[tool.black]
line-length = 120
skip-string-normalization = true
