[tool.poetry]
name = "moviecatalog-app"
version = "0.1.0"
description = ""
authors = []
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
keras = "^2.11.0"
tensorflow-macos = "^2.11.0"
mecab-python3 = "^1.0.6"
pandas = "^1.5.3"
gensim = "^4.3.0"
tensorboardX = "^2.5.1"
torch = "^1.13.1"

[tool.poetry.dev-dependencies]
taskipy = "^1.10.3"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.main:app"

[tool.taskipy.tasks]
format = "poetry run black ./app"
board = "poetry run tensorboard --logdir='runs'"

[tool.black]
line-length = 120
skip-string-normalization = true
