[tool.poetry]
name = "duckdb-pandas"
version = "0.1.0"
description = ""
authors = []
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
duckdb = "^0.8.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
start = "app.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
