[tool.poetry]
name = "ml-learning"
version = "0.1.0"
description = ""
authors = []
packages = [{include = "lib"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
jupyterlab = "^3.6.1"
ipython = "^8.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "lib.jupyter:main"
