[lib]
crate-type = ["cdylib", "rlib"]

[package]
name = "waveslib"
description = "test"
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"

[dependencies]
getrandom = { version = "0.2.8", features = ["js"] }
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = "0.2.84"